@@ -50,6 +50,9 @@ Release 0.9.1 - unreleased
     TAJO-1177: Reduce the use of Sun proprietary API. 
     (Jihun Kang via hyunsik)
 
+    TAJO-1172: Remove Trevni storage type and its related classes.
+    (DaeMyung Kang via hyunsik)
+
   BUG FIXES
     
     TAJO-1162: to_char() returns "-00" second. (Hyoungjun Kim)
